--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,3 +96,5 @@ nav:
     - GL-RM1 (Comet): user_guide/gl-rm1/index.md
   - FAQ:
     - Overview: faq/index.md
+    - Frequently Asked Questions about GL.iNet: faq/frequently_asked_questions_about_glinet_kvm.md
+    - How to Fix Mouse Cursor Overlay Issue on macOS: faq/how_to_fix_mouse_cursor_overlay_issue_on_macOS.md
