--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,3 +98,4 @@ nav:
     - Overview: faq/index.md
     - Frequently Asked Questions about GL.iNet: faq/frequently_asked_questions_about_glinet_kvm.md
     - How to Fix Mouse Cursor Overlay Issue on macOS: faq/how_to_fix_mouse_cursor_overlay_issue_on_macOS.md
+    - How to Set EDID for GL.iNet KVM: faq/how_to_set_edid_for_glkvm.md
