--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,9 +96,21 @@ nav:
     - GL-RM1 (Comet): user_guide/gl-rm1/index.md
   - FAQ:
     - Overview: faq/index.md
-    - Frequently Asked Questions about GL.iNet: faq/frequently_asked_questions_about_glinet_kvm.md
-    - How to Fix Mouse Cursor Overlay Issue on macOS: faq/how_to_fix_mouse_cursor_overlay_issue_on_macOS.md
-    - How to Set EDID for GL.iNet KVM: faq/how_to_set_edid_for_glkvm.md
+    - General:
+      - Frequently Asked Questions about GL.iNet: faq/frequently_asked_questions_about_glinet_kvm.md
+    - Basic Information:
+      - What devices can GL.iNet KVM control? Do I need to install any software to use KVM?: faq/what_devices_can_glinet_kvm_control.md
+      - How to access the controlled device connected to GL.iNet KVM?: faq/how_to_access_the_controlled_device_connected_to_kvm.md
+      - Does GLKVM application support ChromeOS/Linux?: faq/does_glkvm_application_support_chromeos_or_linux.md
+      - Can Comet (GL-RM1) connect to wireless network?: faq/can_comet_connect_to_wireless_network.md
+    - Power Control Related:
+      - Power control related questions about GL.iNet KVM: faq/power_control_related.md
+    - Features:
+      - Features of GL.iNet KVM: faq/features.md
+    - Troubleshooting:
+      - Why can't I control the mouse even if I have all the cables connected: faq/cannot_control_the_mouse.md
+      - How to Fix Mouse Cursor Overlay Issue on macOS: faq/how_to_fix_mouse_cursor_overlay_issue_on_macOS.md
+      - How to Set EDID for GL.iNet KVM: faq/how_to_set_edid_for_glkvm.md
   - Tutorials:
     - Overview: tutorials/index.md
     - How to Set EDID for GL.iNet KVM: tutorials/how_to_set_edid_for_glkvm.md
