--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -112,6 +112,7 @@ nav:
       - What to do if no device is found in the GLKVM app: faq/what_to_do_if_no_device_is_found_in_the_glkvm_app.md
       - Connection failed when remotely accessing via GLKVM application: faq/connection_failed_when_remotely_accessing_via_glkvm_app.md
       - Why can't I control the mouse even if I have all the cables connected: faq/cannot_control_the_mouse.md
+      - Why can't I hear the audio from the controlled device?: faq/cannot_hear_the_audio_from_the_controlled_device.md
       - How to Fix Mouse Cursor Overlay Issue on macOS: faq/how_to_fix_mouse_cursor_overlay_issue_on_macOS.md
       - How to Set EDID for GL.iNet KVM: faq/how_to_set_edid_for_glkvm.md
   - Tutorials:
