add a page for unboxing and first setup in video library

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -121,4 +121,5 @@ nav:
   - Video Library:
     - Overview: video_library/index.md
     - Meet Our New Products: video_library/products.md
+    - Unboxing & First Time Setup: video_library/unboxing_first_set_up.md
     - Features: video_library/features.md
