--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,7 +113,7 @@ nav:
       - Connection failed when remotely accessing via GLKVM app: faq/connection_failed_when_remotely_accessing_via_glkvm_app.md
       - Privacy error when accessing KVM locally via browser: faq/privacy_error_from_your_browser.md
       - Why can't I control the mouse even if I have all the cables connected: faq/cannot_control_the_mouse.md
-      - Why can't I hear the audio from the controlled device?: faq/cannot_hear_the_audio_from_the_controlled_device.md
+      - What should I do if I cannot hear the audio from the controlled device?: faq/cannot_hear_the_audio_from_the_controlled_device.md
       - What to do if I can only see desktop wallpaper when using GLKVM?: faq/can_only_see_desktop_wallpaper_when_using_glkvm.md
       - How to fix mouse cursor overlay issue on macOS: faq/how_to_fix_mouse_cursor_overlay_issue_on_macOS.md
       - How to set EDID for GL.iNet KVM: faq/how_to_set_edid_for_glkvm.md
