--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,15 +109,15 @@ nav:
     - Features:
       - Features of GL.iNet KVM: faq/features.md
     - Troubleshooting:
-      - What to do if no device is found in the GLKVM app: faq/what_to_do_if_no_device_is_found_in_the_glkvm_app.md
+      - No device is found in the GLKVM app: faq/no_device_is_found_in_the_glkvm_app.md
       - Connection failed when remotely accessing via GLKVM app: faq/connection_failed_when_remotely_accessing_via_glkvm_app.md
       - Privacy error when accessing KVM locally via browser: faq/privacy_error_from_your_browser.md
-      - Why can't I control the mouse even if I have all the cables connected: faq/cannot_control_the_mouse.md
-      - Display black screen when accessing the controlled device using GLKVM: faq/display_black_screen_when_using_glkvm.md
-      - What should I do if I cannot hear the audio from the controlled device?: faq/cannot_hear_the_audio_from_the_controlled_device.md
-      - What to do if I can only see desktop wallpaper when using GLKVM?: faq/can_only_see_desktop_wallpaper_when_using_glkvm.md
-      - How to fix mouse cursor overlay issue on macOS: faq/how_to_fix_mouse_cursor_overlay_issue_on_macOS.md
-      - How to set EDID for GL.iNet KVM: faq/how_to_set_edid_for_glkvm.md
+      - Cannot control the mouse: faq/cannot_control_the_mouse.md
+      - Cannot hear audio from the controlled device: faq/cannot_hear_the_audio_from_the_controlled_device.md
+      - Can only see desktop wallpaper when using GLKVM: faq/can_only_see_desktop_wallpaper_when_using_glkvm.md
+      - Display black screen when using GLKVM: faq/display_black_screen_when_using_glkvm.md
+      - Fix mouse cursor overlay issue on macOS: faq/how_to_fix_mouse_cursor_overlay_issue_on_macOS.md
+      - Set EDID for GL.iNet KVM: faq/how_to_set_edid_for_glkvm.md
   - Tutorials:
     - Overview: tutorials/index.md
     - How to set EDID for GL.iNet KVM: tutorials/how_to_set_edid_for_glkvm.md
