--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,7 +116,7 @@ nav:
       - Cannot hear audio from the controlled device: faq/cannot_hear_the_audio_from_the_controlled_device.md
       - Can only see desktop wallpaper when using GLKVM: faq/can_only_see_desktop_wallpaper_when_using_glkvm.md
       - Display blank screen when using GLKVM: faq/display_blank_screen_when_using_glkvm.md
-      - Fix mouse cursor overlay issue on macOS: faq/how_to_fix_mouse_cursor_overlay_issue_on_macOS.md
+      - Mouse cursors fail to overlap when using GLKVM: faq/mouse_cursors_fail_to_overlap_when_using_glkvm.md
       - Set EDID for GL.iNet KVM: faq/how_to_set_edid_for_glkvm.md
   - Tutorials:
     - Overview: tutorials/index.md
