--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,6 +99,7 @@ nav:
     - Overview: faq/index.md
     - General:
       - Frequently Asked Questions about GL.iNet: faq/frequently_asked_questions_about_glinet_kvm.md
+      - Download GLKVM App: faq/glkvm_app.md
     - Basic Information:
       - What devices can GL.iNet KVM control? Do I need to install any software to use KVM: faq/what_devices_can_glinet_kvm_control.md
       - How to access the controlled device connected to GL.iNet KVM: faq/how_to_access_the_controlled_device_connected_to_kvm.md
