--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -111,6 +111,7 @@ nav:
       - Features of GL.iNet KVM: faq/features.md
     - Troubleshooting:
       - No device is found in the GLKVM app: faq/no_device_is_found_in_the_glkvm_app.md
+      - Failed to bind device to the GLKVM app: faq/failed_to_bind_device_to_glkvm_app.md
       - Connection failed when remotely accessing via GLKVM app: faq/connection_failed_when_remotely_accessing_via_glkvm_app.md
       - Privacy error when accessing KVM locally via browser: faq/privacy_error_from_your_browser.md
       - Cannot control the mouse: faq/cannot_control_the_mouse.md
