--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -120,11 +120,13 @@ nav:
       - Only desktop wallpaper appears in GLKVM app: faq/can_only_see_desktop_wallpaper_when_using_glkvm.md
       - Blank screen displayed when using GLKVM: faq/display_blank_screen_when_using_glkvm.md
       - Mouse cursors fail to overlap when using GLKVM: faq/mouse_cursors_fail_to_overlap_when_using_glkvm.md
+      - Mouse latency when RPi4 controls RPi3 via GLKVM: faq/how_to_fix_mouse_latency_when_rpi4_controls_rpi3_via_glkvm.md
       - Set EDID for GL.iNet KVM: faq/how_to_set_edid_for_glkvm.md
   - Tutorials:
     - Overview: tutorials/index.md
     - How to set EDID for GL.iNet KVM: tutorials/how_to_set_edid_for_glkvm.md
     - How to set a static IP for Comet: tutorials/how_to_set_static_ip_for_comet.md
+    - How to fix mouse latency when RPi4 controls RPi3 via GLKVM: tutorials/how_to_fix_mouse_latency_when_rpi4_controls_rpi3_via_glkvm.md
   - Video Library:
     - Overview: video_library/index.md
     - Meet Our New Products: video_library/products.md
