add an faq for glkvm app installation failure

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,6 +113,7 @@ nav:
       - Power cable connected but device unpowered: faq/power_cable_connected_but_device_unpowered.md
       - No device is found in the GLKVM app: faq/no_device_is_found_in_the_glkvm_app.md
       - Failed to bind device to the GLKVM app: faq/failed_to_bind_device_to_glkvm_app.md
+      - Failed to install GLKVM app on Windows: faq/failed_to_install_glkvm_app_the_code_execution_cannot_proceed.md
       - Connection failed when remotely accessing via GLKVM app: faq/connection_failed_when_remotely_accessing_via_glkvm_app.md
       - Privacy error when accessing KVM locally via browser: faq/privacy_error_from_your_browser.md
       - Cannot control the mouse and keyboard: faq/cannot_control_the_mouse.md
