--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -94,6 +94,7 @@ nav:
   - User Guide:
     - Overview: user_guide/index.md
     - GL-RM1 (Comet): user_guide/gl-rm1/index.md
+    - GL-RM1PE (Comet PoE): user_guide/gl-rm1pe/index.md
     - GL-ATX Board: user_guide/gl-atx-board/index.md
   - FAQ:
     - Overview: faq/index.md
