--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,6 +109,7 @@ nav:
     - Local/Remote Access:
       - Local access the controlled device via browser: faq/local_access_to_controlled_device_via_browser.md
       - Remote access the controlled device via GLKVM app: faq/remote_access_to_controlled_device_via_glkvm_app.md
+      - Remote access the controlled device via Tailscale: faq/remote_access_to_controlled_device_via_tailscale.md
     - Power On/Off Control:
       - How does GL.iNet KVM remotely control the power on/off of controlled device: faq/power_on_off_control.md
     - Features:
