--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -101,34 +101,34 @@ nav:
     - Overview: faq/index.md
     - General:
       - Frequently Asked Questions about GL.iNet: faq/frequently_asked_questions_about_glinet_kvm.md
+      - What devices can GL.iNet KVM control? Any software needed to use KVM?: faq/what_devices_can_glinet_kvm_control.md
+      - Does GLKVM app support ChromeOS/Linux?: faq/does_glkvm_application_support_chromeos_or_linux.md
+      - Can Comet (GL-RM1) connect to wireless network?: faq/can_comet_connect_to_wireless_network.md
       - Download GLKVM App: faq/glkvm_app.md
-    - Basic Information:
-      - What devices can GL.iNet KVM control? Do I need to install any software to use KVM: faq/what_devices_can_glinet_kvm_control.md
-      - Does GLKVM application support ChromeOS/Linux: faq/does_glkvm_application_support_chromeos_or_linux.md
-      - Can Comet (GL-RM1) connect to wireless network: faq/can_comet_connect_to_wireless_network.md
-    - Local/Remote Access:
-      - Local access the controlled device via browser: faq/local_access_to_controlled_device_via_browser.md
-      - Remote access the controlled device via GLKVM app: faq/remote_access_to_controlled_device_via_glkvm_app.md
-      - Remote access the controlled device via Tailscale: faq/remote_access_to_controlled_device_via_tailscale.md
-    - Power On/Off Control:
+    - Device Startup & Power Control:
+      - What should I do if my KVM does not power on?: faq/power_cable_connected_but_device_unpowered.md
       - How does GL.iNet KVM remotely control the power on/off of controlled device: faq/power_on_off_control.md
-    - Features:
-      - Features of GL.iNet KVM: faq/features.md
-    - Troubleshooting:
-      - Power cable connected but device unpowered: faq/power_cable_connected_but_device_unpowered.md
+    - Local/Remote Access:
+      - Local access via browser: faq/local_access_to_controlled_device_via_browser.md
+      - Remote access via GLKVM app: faq/remote_access_to_controlled_device_via_glkvm_app.md
+      - Remote access via Tailscale: faq/remote_access_to_controlled_device_via_tailscale.md
+      - Connection failed when remotely accessing via GLKVM app: faq/connection_failed_when_remotely_accessing_via_glkvm_app.md
+      - Privacy error when locally accessing via browser: faq/privacy_error_from_your_browser.md
+    - Software Installation & Device Binding:
       - No device is found in the GLKVM app: faq/no_device_is_found_in_the_glkvm_app.md
       - Failed to bind device to the GLKVM app: faq/failed_to_bind_device_to_glkvm_app.md
       - Failed to install GLKVM app on Windows: faq/failed_to_install_glkvm_app_the_code_execution_cannot_proceed.md
-      - Connection failed when remotely accessing via GLKVM app: faq/connection_failed_when_remotely_accessing_via_glkvm_app.md
-      - Privacy error when accessing KVM locally via browser: faq/privacy_error_from_your_browser.md
-      - Cannot control the mouse and keyboard: faq/cannot_control_the_mouse.md
-      - Cannot hear audio from the controlled device: faq/cannot_hear_the_audio_from_the_controlled_device.md
+    - Display:
       - Only desktop wallpaper appears in GLKVM app: faq/can_only_see_desktop_wallpaper_when_using_glkvm.md
       - Blank screen displayed when using GLKVM: faq/display_blank_screen_when_using_glkvm.md
-      - Mouse cursors fail to overlap when using GLKVM: faq/mouse_cursors_fail_to_overlap_when_using_glkvm.md
-      - Mouse latency when RPi4 controls RPi3 via GLKVM: faq/how_to_fix_mouse_latency_when_rpi4_controls_rpi3_via_glkvm.md
       - BIOS interface does not display in GLKVM: faq/bios_does_not_display_in_glkvm.md
       - Set EDID for GL.iNet KVM: faq/how_to_set_edid_for_glkvm.md
+    - Keyboard & Mouse:
+      - Cannot control the mouse and keyboard: faq/cannot_control_the_mouse.md
+      - Mouse cursors fail to overlap when using GLKVM: faq/mouse_cursors_fail_to_overlap_when_using_glkvm.md
+      - Mouse latency when RPi4 controls RPi3 via GLKVM: faq/how_to_fix_mouse_latency_when_rpi4_controls_rpi3_via_glkvm.md
+    - Audio:
+      - Cannot hear audio from the controlled device: faq/cannot_hear_the_audio_from_the_controlled_device.md
   - Tutorials:
     - Overview: tutorials/index.md
     - How to set EDID for GL.iNet KVM: tutorials/how_to_set_edid_for_glkvm.md
