--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -108,6 +108,7 @@ nav:
       - Download GLKVM App: faq/glkvm_app.md
     - Device Startup & Power Control:
       - What should I do if my KVM does not power on?: faq/power_cable_connected_but_device_unpowered.md
+      - What should I do if my KVM is bricked?: faq/debrick.md
       - How does GL.iNet KVM remotely control the power on/off of controlled device: faq/power_on_off_control.md
     - Local/Remote Access:
       - Local access via browser: faq/local_access_to_controlled_device_via_browser.md
