--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,8 +110,9 @@ nav:
       - What should I do if my KVM does not power on?: faq/power_cable_connected_but_device_unpowered.md
       - What should I do if my KVM is bricked?: faq/debrick.md
       - How does GL.iNet KVM remotely control the power on/off of controlled device: faq/power_on_off_control.md
-    - Local/Remote Access:
+    - Local & Remote Access:
       - Local access via browser: faq/local_access_to_controlled_device_via_browser.md
+      - Remote access via Cloud: faq/remote_access_to_controlled_device_via_cloud.md
       - Remote access via GLKVM app: faq/remote_access_to_controlled_device_via_glkvm_app.md
       - Remote access via Tailscale: faq/remote_access_to_controlled_device_via_tailscale.md
       - Connection failed when remotely accessing via GLKVM app: faq/connection_failed_when_remotely_accessing_via_glkvm_app.md
