--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -139,6 +139,8 @@ nav:
     - How to set EDID for GL.iNet KVM: tutorials/how_to_set_edid_for_glkvm.md
     - How to set a static IP for Comet: tutorials/how_to_set_static_ip_for_comet.md
     - How to fix mouse latency when RPi4 controls RPi3 via GLKVM: tutorials/how_to_fix_mouse_latency_when_rpi4_controls_rpi3_via_glkvm.md
+    - How to debrick KVM via U-Boot: faq/debrick.md
+    - How to change KVM hostname: tutorials/how_to_change_kvm_hostname.md
   - Video Library:
     - Overview: video_library/index.md
     - Meet Our New Products: video_library/products.md
