--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,9 +93,27 @@ nav:
   - Home: index.md
   - User Guide:
     - Overview: user_guide/index.md
-    - GL-RM1 (Comet): user_guide/gl-rm1/index.md
-    - GL-RM10 (Comet Pro): user_guide/gl-rm10/index.md
-    - GL-RM1PE (Comet PoE): user_guide/gl-rm1pe/index.md
+    - GL-RM1 (Comet): 
+      - Get to Know Comet: user_guide/gl-rm1/index.md
+      - Product Overview: user_guide/gl-rm1/product_overview.md
+      - Quick Setup Guide: user_guide/gl-rm1/quick_setup_guide.md
+      - Control Panel Guide: user_guide/gl-rm1/control_panel_guide.md
+      - Accessory Guide: user_guide/gl-rm1/accessory_guide.md
+      - FAQ: https://docs.gl-inet.com/kvm/en/faq/
+    - GL-RM10 (Comet Pro): 
+      - Get to Know Comet: user_guide/gl-rm10/index.md
+      - Product Overview: user_guide/gl-rm10/product_overview.md
+      - Quick Setup Guide: user_guide/gl-rm10/quick_setup_guide.md
+      - Control Panel Guide: user_guide/gl-rm10/control_panel_guide.md
+      - Accessory Guide: user_guide/gl-rm10/accessory_guide.md
+      - FAQ: https://docs.gl-inet.com/kvm/en/faq/
+    - GL-RM1PE (Comet PoE): 
+      - Get to Know Comet: user_guide/gl-rm1pe/index.md
+      - Product Overview: user_guide/gl-rm1pe/product_overview.md
+      - Quick Setup Guide: user_guide/gl-rm1pe/quick_setup_guide.md
+      - Control Panel Guide: user_guide/gl-rm1pe/control_panel_guide.md
+      - Accessory Guide: user_guide/gl-rm1pe/accessory_guide.md
+      - FAQ: https://docs.gl-inet.com/kvm/en/faq/
     - GL-ATXPC (ATX Board): user_guide/gl-atx-board/index.md
     - GL-FGB-01 (Fingerbot): user_guide/gl-fgb-01/index.md
   - FAQ:
