--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,6 @@ plugins:
         'faq/frequently_askedquestions_about_glinet_kvm.md': 'faq/quick_faqs_about_glinet_kvm.md'
         'faq/cannot_hear_the_audio_from_the_controlled_device.md': 'faq/no_audio_from_the_controlled_device.md'
         'faq/can_only_see_desktop_wallpaper_when_using_glkvm.md': 'faq/only_desktop_wallpaper_displayed_in_glkvm.md'
-        'faq/frequently_asked_questions_about_glinet_kvm.md/#features': 'faq/quick_faqs_about_glinet_kvm.md#features'
 
 # Customization
 extra:
@@ -141,12 +140,12 @@ nav:
       - Blank screen displayed in GLKVM: faq/display_blank_screen_when_using_glkvm.md
       - BIOS interface does not display in GLKVM: faq/bios_does_not_display_in_glkvm.md
       - Set EDID for GL.iNet KVM: faq/how_to_set_edid_for_glkvm.md
-    - Keyboard & Mouse:
+    - Keyboard & Mouse Issues:
       - Cannot control mouse and keyboard: faq/cannot_control_the_mouse.md
       - Mouse cursors fail to overlap: faq/mouse_cursors_fail_to_overlap_when_using_glkvm.md
       - Mouse latency when RPi4 controls RPi3 via GLKVM: faq/how_to_fix_mouse_latency_when_rpi4_controls_rpi3_via_glkvm.md
       - Keyboard does not input/output as expected: faq/keyboard_does_not_input_output_as_expected.md
-    - Audio:
+    - Audio Issues:
       - No audio from the controlled device: faq/no_audio_from_the_controlled_device.md
       - The speaker and microphone settings cannot be retained: faq/speaker_microphone_settings_cannot_be_retained.md
   - Tutorials:
