--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -153,14 +153,17 @@ nav:
       - The speaker and microphone settings cannot be retained: faq/speaker_microphone_settings_cannot_be_retained.md
   - Tutorials:
     - Overview: tutorials/index.md
-    - How to set EDID for GL.iNet KVM: tutorials/how_to_set_edid_for_glkvm.md
-    - How to set a static IP for Comet: tutorials/how_to_set_static_ip_for_comet.md
-    - How to share files between controlling and controlled devices: tutorials/how_to_share_files_between_controlling_device_and_controlled_device.md
-    - How to fix mouse latency when RPi4 controls RPi3 via GLKVM: tutorials/how_to_fix_mouse_latency_when_rpi4_controls_rpi3_via_glkvm.md
-    - How to unbrick KVM via U-Boot: faq/debrick.md
-    - How to unbrick KVM via RKDevTool: tutorials/how_to_debrick_kvm_via_rkdevtool.md
-    - How to change KVM hostname: tutorials/how_to_change_kvm_hostname.md
-    - How to change device identity: tutorials/how_to_change_device_identity.md
+    - Basic Setup:
+      - How to set a static IP for KVM: tutorials/how_to_set_static_ip_for_comet.md
+      - How to change KVM hostname: tutorials/how_to_change_kvm_hostname.md
+      - How to change device identity: tutorials/how_to_change_device_identity.md
+      - How to set EDID for KVM: tutorials/how_to_set_edid_for_glkvm.md
+    - Virtual Media:
+      - How to share files via KVM: tutorials/how_to_share_files_between_controlling_device_and_controlled_device.md
+    - Troubleshooting: 
+      - How to unbrick KVM via U-Boot: faq/debrick.md
+      - How to unbrick KVM via RKDevTool: tutorials/how_to_debrick_kvm_via_rkdevtool.md
+      - How to fix mouse latency when RPi4 controls RPi3: tutorials/how_to_fix_mouse_latency_when_rpi4_controls_rpi3_via_glkvm.md
   - Video Library:
     - Overview: video_library/index.md
     - Meet Our New Products: video_library/products.md
