--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -156,7 +156,7 @@ nav:
     - Basic Setup:
       - How to set a static IP for KVM: tutorials/how_to_set_static_ip_for_comet.md
       - How to change KVM hostname: tutorials/how_to_change_kvm_hostname.md
-      - How to change device identity: tutorials/how_to_change_device_identity.md
+      - How to change KVM device identity: tutorials/how_to_change_device_identity.md
       - How to set EDID for KVM: tutorials/how_to_set_edid_for_glkvm.md
     - Virtual Media:
       - How to share files via KVM: tutorials/how_to_share_files_between_controlling_device_and_controlled_device.md
