--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -105,17 +105,23 @@ nav:
       - Control Panel Guide: user_guide/gl-rm1/control_panel_guide.md
       - FCC & IC Compliance Statements: user_guide/gl-rm1/fcc_ic_compliance_statements.md
     - GL-RM10 (Comet Pro): 
-      - Get to Know Comet: user_guide/gl-rm10/index.md
+      - Get to Know Comet Pro: user_guide/gl-rm10/index.md
       - Product Overview: user_guide/gl-rm10/product_overview.md
       - Quick Setup Guide: user_guide/gl-rm10/quick_setup_guide.md
       - Control Panel Guide: user_guide/gl-rm10/control_panel_guide.md
       - FCC & IC Compliance Statements: user_guide/gl-rm10/fcc_ic_compliance_statements.md
     - GL-RM1PE (Comet PoE): 
-      - Get to Know Comet: user_guide/gl-rm1pe/index.md
+      - Get to Know Comet PoE: user_guide/gl-rm1pe/index.md
       - Product Overview: user_guide/gl-rm1pe/product_overview.md
       - Quick Setup Guide: user_guide/gl-rm1pe/quick_setup_guide.md
       - Control Panel Guide: user_guide/gl-rm1pe/control_panel_guide.md
       - FCC & IC Compliance Statements: user_guide/gl-rm1pe/fcc_ic_compliance_statements.md
+    - GL-RM10RC (Comet 5G): 
+      - Get to Know Comet 5G: user_guide/gl-rm10rc/index.md
+      - Product Overview: user_guide/gl-rm10rc/product_overview.md
+      - Quick Setup Guide: user_guide/gl-rm10rc/quick_setup_guide.md
+      - Control Panel Guide: user_guide/gl-rm10rc/control_panel_guide.md
+      - FCC & IC Compliance Statements: user_guide/gl-rm10rc/fcc_ic_compliance_statements.md
     - GL-ATXPC (ATX Board): user_guide/gl-atx-board/index.md
     - GL-FGB-01 (Fingerbot): user_guide/gl-fgb-01/index.md
   - FAQ:
