--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -163,7 +163,7 @@ nav:
       - The speaker and microphone settings cannot be retained: faq/speaker_microphone_settings_cannot_be_retained.md
   - Tutorials:
     - Overview: tutorials/index.md
-    - Basic Setup:
+    - System Settings:
       - How to set a static IP for KVM: tutorials/how_to_set_static_ip_for_comet.md
       - How to change KVM hostname: tutorials/how_to_change_kvm_hostname.md
       - How to change KVM device identity: tutorials/how_to_change_device_identity.md
@@ -177,6 +177,7 @@ nav:
     - Troubleshooting: 
       - How to unbrick KVM via U-Boot: faq/debrick.md
       - How to unbrick KVM via RKDevTool: tutorials/how_to_debrick_kvm_via_rkdevtool.md
+      - How to export cellular logs?: tutorials/how_to_export_cellular_logs.md
       - How to fix mouse latency when RPi4 controls RPi3: tutorials/how_to_fix_mouse_latency_when_rpi4_controls_rpi3_via_glkvm.md
   - Video Library:
     - Overview: video_library/index.md
